# prospectus

./: new-template.cabal  ninety-nine-problems.md
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/flag-cache/: StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689  base-orphans-0.4.4-61f87fbe40b70a96b4f01742198bd89e  bifunctors-5-5848a68efd0cd938a6ae6b6f40a6ae6a  comonad-4.2.7.2-477b34de5458ad012ace23893fa227b8  contravariant-1.3.3-7e2fa0458dc8382e9c54337ddfd1c777  distributive-0.4.4-880c9a67c4dc4c1543e83362573be528  exceptions-0.8.0.2-b08bd0de7dff383d124cad3f4c34eddd  free-4.12.1-bf666c12ccaca5c9cd49f960aeb4b500  hashable-1.2.3.3-09c4177c49dd46a63f7036317bb17114  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  nats-1-3ca5cbcec233c17da785d5f27705643c  new-template-0.1.0.0-ecc7179ee91a91ec541d38000d8ae65e  prelude-extras-0.4.0.2-9cd8ab3397fab5f95aeab2ca5eb4ba56  profunctors-5.1.2-72071e68b9237f948d53dd623ffa97a6  semigroupoids-5.0.0.4-379ed7807d4e532c9a22b4744978e793  semigroups-0.16.2.2-870d54bbdbbbc1bf0b2ef86678c125d1  stm-2.4.4-2526ff89874f899372b2e4f544bb03cd  tagged-0.8.2-12dad1c1a299367fbfb766d48a9b8f3c  text-1.2.1.3-2395ef415c1b20175aae83b50060e389  transformers-compat-0.4.0.4-3ca5cbcec233c17da785d5f27705643c  unordered-containers-0.2.5.1-09ed02f61ed89449c8cd4b51d7f295c2  void-0.7.1-a3c2de5724ac8a1217d95ecd31051aa3
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/pkgdb/: new-template-0.1.0.0-e4c3b0aa9b9e9a44144d566b668bc129.conf  package.cache
src/: Lib.hs
(+3 files in other folders)
