name:                new-template
version:             0.1.0.0
synopsis:            Prospectus Language
description:         Please see README.md
homepage:            http://github.com/jcc333/prospectus
license:             BSD3
license-file:        LICENSE
author:              James Clemer
maintainer:          clemer19@gmail.com
-- copyright:
category:            Systems
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable new-template-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , new-template
                     , text
                     , containers
                     , free
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , new-template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
